Fix layout issues in game

--- a/app/src/components/room/Leaderboard/style.module.scss
+++ b/app/src/components/room/Leaderboard/style.module.scss
@@ -1,6 +1,11 @@
 @use '@/scss/fonts' as *;
 @use '@/scss/breakpoints' as *;
 
+@mixin font-leaderboard($size) {
+	@include font-heading($size);
+	line-height: 0.75;
+}
+
 .leaderboard {
 	.divider {
 		margin-block: 16px;
@@ -44,7 +49,6 @@
 .user {
 	display: flex;
 	align-items: center;
-	gap: 8px;
 	height: 40px;
 
 	.username,
@@ -53,30 +57,47 @@
 	}
 
 	.username {
-		@include font-heading(16);
+		@include font-leaderboard(12);
+		padding-block: 0.2em;
+		overflow: hidden;
+		text-overflow: ellipsis;
+
+		&__text {
+			display: inline;
+		}
 
 		&__you {
-			@include font-heading(12);
+			@include font-leaderboard(10);
 			color: var(--placeholder);
 			display: inline;
+		}
+
+		@container (width > 250px) {
+			@include font-leaderboard(14);
+
+			&__you {
+				@include font-leaderboard(12);
+			}
+		}
+
+		@container (width > 325px) {
+			@include font-leaderboard(16);
+
+			&__you {
+				@include font-leaderboard(14);
+			}
 		}
 	}
 
 	.wpm {
-		@include font-heading(12);
-	}
+		@include font-heading(10);
 
-	@media screen and (width > $screen-sm) {
-		.username {
-			@include font-heading(20);
-
-			&__you {
-				@include font-heading(14);
-			}
+		@container (width > 250px) {
+			@include font-leaderboard(14);
 		}
 
-		.wpm {
-			@include font-heading(14);
+		@container (width > 325px) {
+			@include font-leaderboard(16);
 		}
 	}
 
@@ -86,6 +107,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		container-type: inline-size;
 
 		&--failed {
 			padding-inline: 0;
@@ -96,5 +118,14 @@
 		.wpm {
 			color: var(--background);
 		}
+	}
+
+	&__outside {
+		height: 100%;
+		display: flex;
+		align-items: center;
+		gap: 8px;
+		padding-left: 8px;
+		container-type: inline-size;
 	}
 }
